--- a/package.json
+++ b/package.json
@@ -15,5 +15,16 @@
   "bugs": {
     "url": "https://github.com/kucharskimaciej/dm-marionette-survey/issues"
   },
-  "homepage": "https://github.com/kucharskimaciej/dm-marionette-survey"
+  "homepage": "https://github.com/kucharskimaciej/dm-marionette-survey",
+  "dependencies": {
+    "gulp": "^3.8.11",
+    "gulp-concat": "^2.5.2",
+    "gulp-dedupe": "0.0.2",
+    "gulp-inject": "^1.2.0",
+    "gulp-jscs": "^1.6.0",
+    "gulp-jscs-stylish": "^1.1.0",
+    "gulp-jshint": "^1.10.0",
+    "jshint-stylish": "^1.0.1",
+    "main-bower-files": "^2.7.0"
+  }
 }
