--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
   "homepage": "https://github.com/kucharskimaciej/dm-marionette-survey",
   "dependencies": {
     "gulp": "^3.8.11",
+    "gulp-browserify": "^0.5.1",
     "gulp-concat": "^2.5.2",
     "gulp-dedupe": "0.0.2",
     "gulp-inject": "^1.2.0",
     "gulp-jscs": "^1.6.0",
     "gulp-jscs-stylish": "^1.1.0",
     "gulp-jshint": "^1.10.0",
+    "gulp-template-compile": "^1.0.0",
     "jshint-stylish": "^1.0.1",
     "main-bower-files": "^2.7.0"
   }
