--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gulp-jscs-stylish": "^1.1.0",
     "gulp-jshint": "^1.10.0",
     "gulp-template-compile": "^1.0.0",
+    "gulp-webserver": "^0.9.0",
     "jshint-stylish": "^1.0.1",
     "main-bower-files": "^2.7.0"
   }
